[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player/playerShip1_blue.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Background/purple.png" type="Texture" id=3]
[ext_resource path="res://Background/Background.gd" type="Script" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://kenvector_future.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Background/PointsLabel.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 35.0
height = 24.0

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2, -2, 0, 0, 0, 0, 1024, -2, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, -2, 600, 0, 0, 0, 0, -2, -2 )
}

[node name="Game" type="Node"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 1177, 0 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 500, 300 )
scale = Vector2( 1.37891, 1.34375 )
texture = ExtResource( 3 )

[node name="PointsLabel" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_top = 2.0
margin_right = -8.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 4 )
align = 2
valign = 1
script = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 500, 275 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Player/CollisionShape2D"]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="ReloadTimer" type="Timer" parent="Player"]
wait_time = 1.5
one_shot = true

[node name="LaserPosition" type="Position2D" parent="Player"]
position = Vector2( 24, -46 )
rotation = 1.5708

[node name="Laser1Position" type="Position2D" parent="Player"]
position = Vector2( 24, 46 )
rotation = 1.5708

[node name="MeteorTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="MeteorSpawn" type="Path2D" parent="."]
position = Vector2( 1.9961, 1.99336 )
scale = Vector2( 0.998049, 0.996678 )
curve = SubResource( 2 )

[node name="Location" type="PathFollow2D" parent="MeteorSpawn"]
position = Vector2( -2, -2 )
rotation = 6.06456e-08
